...
            android:padding="14dp"
            android:paddingEnd="50dp"
            android:textColor="#082238"
            android:textColorHint="#5F6C7B" />

        <LinearLayout
            android:id="@+id/clearFilters"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/category_filter_outline"
            android:gravity="center"
            android:clickable="true"
...
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/next_month_filter"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_outline"
        android:text="@string/EventTimeFilter"
...
