...
    <string name="userNameText">Username</string>
    <string name="usernameHint">ex: JohnSmith123</string>

    <string name="signUpButton">Create Account!</string>


    <string name="EventsTitle">Events</string>
    <string name="MyTicketsTitle">My Tickets</string>
    <string name="ProfileTitle">My Profile</string>
    <string name="AdminDashboardTitle">Admin Dashboard</string>

    <string name="navBarComponent1ContentDescription">Explore Events icon</string>
    <string name="navBarComponent2ContentDescription">User Tickets icon</string>
    <string name="navBarComponent3ContentDescription">Profile icon</string>
    <string name="navBarComponent4ContentDescription">Admin Dashboard icon</string>

...
